# AdventOfCode

./: .gitignore  Cargo.toml  README.md
2024/1/d1p1/src/: main.rs
2024/1/d1p2/src/: main.rs
2024/2/d2p1/src/: main.rs
2024/2/d2p2/src/: functs.rs  main.rs
2024/3/d3p1/: Cargo.toml
2024/3/d3p1/src/: main.rs
2024/3/d3p2/: Cargo.toml
2024/3/d3p2/src/: main-westk-9463-safeBackup-0001.rs  main-westk-9463-safeBackup-0002.rs  main.rs
2024/4/d4p1/: Cargo.toml
2024/4/d4p1/src/: funcs.rs  lib.rs  main.rs
2024/4/d4p2/: Cargo.toml
2024/4/d4p2/src/: funcs.rs  main.rs
2024/5/d5p1/: Cargo.toml
2024/5/d5p1/src/: main.rs
2024/5/d5p2/: Cargo.toml
